# tauri-test

./: Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: publish.yml  test.yml
crates/tauri-test/: Cargo.toml
crates/tauri-test-macros/: Cargo.toml  README.md
crates/tauri-test-macros/src/: lib.rs
crates/tauri-test/src/: args.rs  lib.rs  state.rs
crates/tauri-test/tests/: args_and_state.rs
examples/tauri-app/: README.md  package-lock.json  package.json
examples/tauri-app/scripts/: build-napi.mjs
examples/tauri-app/src/: App.tsx
examples/tauri-app/src-tauri/: Cargo.toml  build.rs  package.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/tests/: app.test.tsx  setup.ts
src/: index.ts
tests/: setupTauriNapi.test.js
