[workspace]
members = [
    "crates/tauri-test",
    "crates/tauri-test-macros",
    "examples/tauri-app/src-tauri",
]
default-members = [
    "crates/tauri-test",
    "crates/tauri-test-macros",
]
exclude = []
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Ziinc/tauri-test"
homepage = "https://github.com/Ziinc/tauri-test"
