[package]
name = "tauri-test-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Implementation crate for tauri-test procedural macros."
readme = "README.md"
keywords = ["tauri", "testing", "macros", "proc-macro"]
categories = ["development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
toml = "0.8"
